[package]
name = "rustica-agent"
version = "0.2.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
byteorder = "*"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4.2"
log = "0.4.13"
prost = "0.6"
ring = "0.16.9"
rustica-keys = {version = "0.3.5", features = ["yubikey"]}
serde = "1.0.97"
serde_derive = "1.0"
sha2 = "0.9.2"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.8"
tonic = {version = "0.3", features = ["tls"] }
yubikey-piv = {version = "0.1.0", features = ["untested"]}

[build-dependencies]
tonic-build = "0.3"
